--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Aprendo a trabalhar com o GIT
+Aplicação Teste
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
